--- a/style.css
+++ b/style.css
@@ -14,23 +14,7 @@ h1:hover{
         transition-timing-function: ease-in-out;
     }
 
-   nav ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-      }
-
-  nav ul  li {
-        display: inline;
-      }
-
-   nav ul li a {
-        display: block;
-        padding: 8px;
-        background-color: #dddddd;
-      }
+   td
 
 
 #outline {
