fixed after merge

--- a/style.css
+++ b/style.css
@@ -14,22 +14,19 @@ h1:hover{
         transition-timing-function: ease-in-out;
     }
 
-   td {
+  td {
        padding: 20px;
    }
-<<<<<<< HEAD
-=======
    
    a {
        font-size:12px;
        transition: .5s font-size linear;
    }
 
-   a:hover {
+   a:hover{
        font-size: 24px;
-       transition-timing-function: ease-in-out;
+       transition: .5s font-size linear;
    }
->>>>>>> master
 
 
 #outline {
@@ -53,8 +50,4 @@ h1:hover{
 body {
     font-family:monospace;
     background-color:black;
-<<<<<<< HEAD
     }
-=======
-    }
->>>>>>> master
