--- a/style.css
+++ b/style.css
@@ -23,27 +23,42 @@ h1:hover{
         transition-timing-function: ease-in-out;
     }
 
+
+
 #img{
-        width: 60%;
         transition: width 2s;
         transition: transform .2s; /* Animation */
         margin: 0 auto;
     }
 
-    #img:hover{
-        transform: scale(2.5);
+#img:hover{
+        transform: scale(2);
     }
 
-  td {
+.column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
+      }
+      
+      /* Clearfix (clear floats) */
+ .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+
+
+td {
        padding: 20px;
    }
    
-   a {
+a {
        font-size:12px;
        transition: .5s font-size linear;
    }
 
-   a:hover{
+a:hover{
        font-size: 24px;
        transition: .5s font-size linear;
        transition-timing-function: ease-in-out;
