--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
 
-@media screen and (min-width: 480px){
-
-    body{
-        background-color: rgb(17, 0, 255);
-    }
-
-}
-
 
 h1 {
         font-size:40px;
@@ -81,4 +73,38 @@ a:hover{
 body {
     font-family:monospace;
     background-color:black;
+    }
+
+    @media screen and (min-width: 200px) and (max-width: 600px){
+
+    
+        #bgstyle{
+            padding:20px;
+            margin-right: 10px;
+            margin-left: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        #outline {
+            border-radius: 25px;
+            border: 5px solid rgb(36, 36, 253);
+            margin-right: 10px;
+            margin-left: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;  
+        }
+    
+        h1 {
+            font-size:24px;
+            transition: none !important;
+            transition-timing-function: none !important;
+        }
+        h1:hover{
+            font-size:24px;
+            transition: none !important;
+            transition-timing-function: none !important;
+        }
+
+    
     }
