--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
     background-color:black;
     }
 
-    @media screen and (min-width: 200px) and (max-width: 600px){
+    @media screen and (max-width: 600px){
 
     
         #bgstyle{
@@ -84,6 +84,7 @@ body {
             margin-left: 10px;
             margin-top: 10px;
             margin-bottom: 10px;
+            background-color: rgb(235, 218, 118);
         }
 
         #outline {
@@ -102,6 +103,17 @@ body {
         }
         h1:hover{
             font-size:24px;
+            transition: none !important;
+            transition-timing-function: none !important;
+        }
+
+        a {
+            font-size:12px;
+            transition: none !important;
+        }
+     
+     a:hover{
+            font-size: 12px;
             transition: none !important;
             transition-timing-function: none !important;
         }
