Contact page textarea fixed

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 
-h1 {
+    h1 {
         font-size:40px;
         transition: 1s font-size linear;
     }
-h1:hover{
+    h1:hover{
         font-size:50px;
         transition: 1s font-size linear;
         transition-timing-function: ease-in-out;
@@ -12,47 +12,47 @@ h1:hover{
 
 
 
-#img{
+    #img{
         transition: width 2s;
-        transition: transform .2s; /* Animation */
+        transition: transform .2s; 
         margin: 0 auto;
     }
 
-#img:hover{
+    #img:hover{
         transform: scale(2);
     }
 
-.column {
+    .column {
         float: left;
         width: 33.33%;
         padding: 5px;
       }
       
       /* Clearfix (clear floats) */
- .row::after {
+    .row::after {
         content: "";
         clear: both;
         display: table;
       }
 
 
-td {
+    td {
        padding: 20px;
-   }
+    }
    
-a {
+    a {
        font-size:12px;
        transition: .5s font-size linear;
    }
 
-a:hover{
+    a:hover{
        font-size: 24px;
        transition: .5s font-size linear;
        transition-timing-function: ease-in-out;
    }
 
 
-#outline {
+    #outline {
         border-radius: 25px;
         border: 5px solid rgb(36, 36, 253);
         margin-right: 20px;
@@ -61,21 +61,21 @@ a:hover{
         margin-bottom: 10px;  
     }
 
-#bgstyle {
-    border-radius: 25px;
-    background-color:rgb(248, 238, 98);
-    padding:20px;
-    margin-right: 50px;
-    margin-left: 50px;
-    margin-top: 20px;
-    margin-bottom: 50px;
+    #bgstyle {
+        border-radius: 25px;
+        background-color:rgb(248, 238, 98);
+        padding:20px;
+        margin-right: 50px;
+        margin-left: 50px;
+        margin-top: 20px;
+        margin-bottom: 50px;
     }
-body {
-    font-family:monospace;
-    background-color:black;
+    body {
+        font-family:monospace;
+        background-color:black;
     }
 
-    @media screen and (max-width: 600px){
+    @media screen and (max-width: 600px){ /*Adapt to any screen size under 600px wide*/
 
     
         #bgstyle{
@@ -112,7 +112,7 @@ body {
             transition: none !important;
         }
      
-     a:hover{
+        a:hover{
             font-size: 12px;
             transition: none !important;
             transition-timing-function: none !important;
